# SKTUI

./: .gitignore  CMakeLists.txt  Makefile  Makefile_bak  README.md
cmake/: sktui_coverage.cmake  sktui_export.cmake  sktui_fuzzer.cmake  sktui_install.cmake  sktui_set_options.cmake
examples/: border_test.cpp  button_test.cpp
include/terminal/: pixel.h
src/: sktui.cpp
src/elements/: border.cpp  button.cpp  elementbase.cpp  line.cpp  uidgenerator.cpp
src/headers/: sktui.h  sktui.hpp  util.h  util.hpp
src/headers/elements/: border.h  border.hpp  button.hpp  elementbase.h  elementbase.hpp  line.h  line.hpp  uidgenerator.h
src/headers/terminal/: color.h  color.hpp  literals.h  literals.hpp  mouse.hpp  pixel.h  pixel.hpp  screen.h  terminal.h  terminal.hpp  window.h  window.hpp
src/terminal/: color.cpp  pixel.cpp  screen.cpp  terminal.cpp  window.cpp
tests/: CMakeLists.txt
tests/samples/: CMakeLists.txt  border.cpp  button.cpp
